--- a/src/styles/modules/home.scss
+++ b/src/styles/modules/home.scss
@@ -144,6 +144,11 @@ img {
   justify-content: space-between;
   z-index: 1;
 
+  .mesh {
+    width: 40px;
+    height: 40px;
+  }
+
   .row {
     display: flex;
     gap: 2em;
